--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
   </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <title>home</title>
+    <link rel="stylesheet" href="home.css">
+</head>
+<body>
+    <div class="contain">
+        <img src="images/image-qr-code.png">
+        <p> <h2> Improve your font-end 
+            skills by providing projects
+        </h2></p>
+        <p> scan the QR code to visit font-end
+Mentor and take your coding skills to
+the next level.
+        </p>
+        <button>submit</button>
+    </div>
+   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
